Fix double border bottom in tag img within figure

--- a/tsd.math.software---mvp/public/styles/msw-engineer.css
+++ b/tsd.math.software---mvp/public/styles/msw-engineer.css
@@ -304,6 +304,10 @@ figure:has(img) > figcaption {
     border-radius: 0 0 1rem 1rem;
 }
 
+figure > img {
+    border-bottom: none;
+}
+
 code > span {
     font-family: "JetBrains Mono", monospace;
 }
